<?xml version="1.0" encoding="utf-8"?>
<!-- Pake Linear layout aja buat dijadiin urut ke bawah (gk terlalu banyak nulis sama jg)-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="My First Application"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <!--For Name display-->
    <TextView
        android:id="@+id/name_display"
        style="@style/text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_value" />

    <!-- For Number display-->
    <TextView
        android:id="@+id/number_display"
        style="@style/text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number_value" />

    <!-- For Name input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_wrapper"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- For Number input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_wrapper"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/name_submit"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_name_value" />

</LinearLayout>